--- a/pt_BR.lang
+++ b/pt_BR.lang
@@ -405,211 +405,211 @@ item.rose_incense.name=Incenso Rosa
 item.sea_incense.name=Incenso Mar
 item.wave_incense.name=Incenso Onda
 
-item.bug_gem.name=Gema Inseto
-item.dark_gem.name=Gema Noturna
-item.dragon_gem.name=Gema Dragão
-item.electric_gem.name=Gema Elétrica
-item.fighting_gem.name=Gema Lutadora
-item.fire_gem.name=Gema de Fogo
-item.flying_gem.name=Gema Voadora
-item.ghost_gem.name=Gema Fantasma
-item.grass_gem.name=Gema de Grama
-item.ground_gem.name=Gema de Terra
-item.ice_gem.name=Gema de Gelo
-item.normal_gem.name=Gema Normal
-item.poison_gem.name=Gema Venenosa
-item.psychic_gem.name=Gema Psíquica
-item.rock_gem.name=Gema Pedra
-item.steel_gem.name=Gema de Ferro
-item.water_gem.name=Gema de Água
-item.fairy_gem.name=Gema Fada
+item.bug_gem.name=Gema inseto
+item.dark_gem.name=Gema noturna
+item.dragon_gem.name=Gema dragão
+item.electric_gem.name=Gema elétrica
+item.fighting_gem.name=Gema lutadora
+item.fire_gem.name=Gema de fogo
+item.flying_gem.name=Gema voadora
+item.ghost_gem.name=Gema fantasma
+item.grass_gem.name=Gema de grama
+item.ground_gem.name=Gema de terra
+item.ice_gem.name=Gema de gelo
+item.normal_gem.name=Gema normal
+item.poison_gem.name=Gema venenosa
+item.psychic_gem.name=Gema psíquica
+item.rock_gem.name=Gema de pedra
+item.steel_gem.name=Gema de aço
+item.water_gem.name=Gema de água
+item.fairy_gem.name=Gema fada
 
-item.bug_gem.special=Gema Inseto Sagrada
-item.dark_gem.special=Hallowed Dark Gem
-item.dragon_gem.special=Hallowed Dragon Gem
-item.electric_gem.special=Hallowed Electric Gem
-item.fighting_gem.special=Hallowed Fighting Gem
-item.fire_gem.special=Hallowed Fire Gem
-item.flying_gem.special=Hallowed Flying Gem
-item.ghost_gem.special=Hallowed Ghost Gem
-item.grass_gem.special=Hallowed Grass Gem
-item.ground_gem.special=Hallowed Ground Gem
-item.ice_gem.special=Hallowed Ice Gem
-item.normal_gem.special=Hallowed Normal Gem
-item.poison_gem.special=Hallowed Poison Gem
-item.psychic_gem.special=Hallowed Psychic Gem
-item.rock_gem.special=Hallowed Rock Gem
-item.steel_gem.special=Hallowed Steel Gem
-item.water_gem.special=Hallowed Water Gem
-item.fairy_gem.special=Hallowed Fairy Gem
+item.bug_gem.special=Gema inseto sagrada
+item.dark_gem.special=Gema noturna sagrada
+item.dragon_gem.special=Gema Dragão sagrada
+item.electric_gem.special=Gema elétrica sagrada
+item.fighting_gem.special=Gema lutadora sagrada
+item.fire_gem.special=Gema de fogo sagrada
+item.flying_gem.special=Gema voadora sagrada
+item.ghost_gem.special=Gema fantasma sagrada
+item.grass_gem.special=Gema de grama sagrada
+item.ground_gem.special=Gema de terra sagrada
+item.ice_gem.special=Gema de gelo sagrada
+item.normal_gem.special=Gema normal sagrada
+item.poison_gem.special=Gema venenosa sagrada
+item.psychic_gem.special=Gema psíquica sagrada
+item.rock_gem.special=Gema de pedra sagrada
+item.steel_gem.special=Gema de aço sagrada
+item.water_gem.special=Gema de água sagrada
+item.fairy_gem.special=Gema fada sagrada
 
-item.black_belt.name=Black Belt
-item.black_glasses.name=Black Glasses
-item.charcoal.name=Charcoal
-item.dragon_fang.name=Dragon Fang
-item.hard_stone.name=Hard Stone
-item.magnet.name=Magnet
-item.metal_coat.name=Metal Coat
-item.prism_scale.name=Prism Scale
-item.miracle_seed.name=Miracle Seed
-item.mystic_water.name=Mystic Water
-item.never_melt_ice.name=Never-Melt Ice
-item.poison_barb.name=Poison Barb
-item.sharp_beak.name=Sharp Beak
-item.silk_scarf.name=Silk Scarf
-item.silver_powder.name=Silver Powder
-item.soft_sand.name=Soft Sand
-item.spell_tag.name=Spell Tag
-item.twisted_spoon.name=Twisted Spoon
-item.destiny_knot.name=Destiny Knot
-item.x_attack.name=X Attack
-item.x_defence.name=X Defense
-item.x_special_attack.name=X Sp. Atk
-item.x_special_defence.name=X Sp. Def
-item.x_speed.name=X Speed
-item.x_accuracy.name=X Accuracy
-item.dire_hit.name=Dire Hit
+item.black_belt.name=Cinto preto
+item.black_glasses.name=Óculos preto
+item.charcoal.name=Carvão vegetal
+item.dragon_fang.name=garra de dragão
+item.hard_stone.name=Pedra dura
+item.magnet.name=Ímã
+item.metal_coat.name=Revestimento de metal
+item.prism_scale.name=Escala prisma
+item.miracle_seed.name=Semente milagrosa
+item.mystic_water.name=Água mística
+item.never_melt_ice.name=Gelo nunca-derretido
+item.poison_barb.name=farpa envenenada
+item.sharp_beak.name=Bico pontudo
+item.silk_scarf.name=Cachecol de seda
+item.silver_powder.name=Pó de prata
+item.soft_sand.name=Areia fofa
+item.spell_tag.name=Etiqueta de soletrar
+item.twisted_spoon.name=Colher torcida
+item.destiny_knot.name=Nó do destino
+item.x_attack.name=X Ataque
+item.x_defence.name=X Defesa
+item.x_special_attack.name=X Esp. Ata
+item.x_special_defence.name=X Esp. Def
+item.x_speed.name=X Velocidade
+item.x_accuracy.name=X Mira
+item.dire_hit.name=Golpe Medonho
 
-item.chisel.name=Chisel
-item.ranch_upgrade.name=Ranch Upgrade
-item.hourglass_gold.name=Isi's Golden Hourglass
-item.hourglass_silver.name=Isi's Silver Hourglass
-item.pixelmon_sprite.name=Photo
-item.entity_pixelmon_painting_item.name=Pokémon Painting
-item.camera.name=Camera
-item.film.name=Film
+item.chisel.name=Cinzel
+item.ranch_upgrade.name=Upgrade de domínio
+item.hourglass_gold.name=Ampulheta dourada de Isi
+item.hourglass_silver.name=Ampulheta prata de Isi
+item.pixelmon_sprite.name=Foto
+item.entity_pixelmon_painting_item.name=Poké Pintura
+item.camera.name=Câmera
+item.film.name=Filme
 
 tile.poke_chest.name=Poké Baú
 tile.ultra_chest.name=Ultra Baú
 tile.master_chest.name=Baú Mestre
 
-item.tm1.name=TM1: Hone Claws
-item.tm2.name=TM2: Dragon Claw
-item.tm3.name=TM3: Psyshock
-item.tm4.name=TM4: Calm Mind
-item.tm5.name=TM5: Roar
-item.tm6.name=TM6: Toxic
-item.tm7.name=TM7: Hail
-item.tm8.name=TM8: Bulk Up
-item.tm9.name=TM9: Venoshock
-item.tm10.name=TM10: Hidden Power
-item.tm11.name=TM11: Sunny Day
-item.tm12.name=TM12: Taunt
-item.tm13.name=TM13: Ice Beam
-item.tm14.name=TM14: Blizzard
-item.tm15.name=TM15: Hyper Beam
-item.tm16.name=TM16: Light Screen
-item.tm17.name=TM17: Protect
-item.tm18.name=TM18: Rain Dance
-item.tm19.name=TM19: Telekinesis
-item.tm20.name=TM20: Safeguard
-item.tm21.name=TM21: Frustration
-item.tm22.name=TM22: SolarBeam
-item.tm23.name=TM23: Smack Down
-item.tm24.name=TM24: Thunderbolt
-item.tm25.name=TM25: Thunder
-item.tm26.name=TM26: Earthquake
-item.tm27.name=TM27: Return
-item.tm28.name=TM28: Dig
-item.tm29.name=TM29: Psychic
-item.tm30.name=TM30: Shadow Ball
-item.tm31.name=TM31: Brick Break
-item.tm32.name=TM32: Double Team
-item.tm33.name=TM33: Reflect
-item.tm34.name=TM34: Sludge Wave
-item.tm35.name=TM35: Flamethrower
-item.tm36.name=TM36: Sludge Bomb
-item.tm37.name=TM37: Sandstorm
-item.tm38.name=TM38: Fire Blast
-item.tm39.name=TM39: Rock Tomb
-item.tm40.name=TM40: Aerial Ace
-item.tm41.name=TM41: Torment
-item.tm42.name=TM42: Facade
-item.tm43.name=TM43: Flame Charge
-item.tm44.name=TM44: Rest
-item.tm45.name=TM45: Attract
-item.tm46.name=TM46: Thief
-item.tm47.name=TM47: Low Sweep
-item.tm48.name=TM48: Round
-item.tm49.name=TM49: Echoed Voice
-item.tm50.name=TM50: Overheat
-item.tm51.name=TM51: Ally Switch
-item.tm52.name=TM52: Focus Blast
-item.tm53.name=TM53: Energy Ball
-item.tm54.name=TM54: False Swipe
-item.tm55.name=TM55: Scald
-item.tm56.name=TM56: Fling
-item.tm57.name=TM57: Charge Beam
-item.tm58.name=TM58: Sky Drop
-item.tm59.name=TM59: Incinerate
-item.tm60.name=TM60: Quash
-item.tm61.name=TM61: Will-O-Wisp
-item.tm62.name=TM62: Acrobatics
+item.tm1.name=TM1: Garra afiada
+item.tm2.name=TM2: Garra de dragão
+item.tm3.name=TM3: Onda psíquica
+item.tm4.name=TM4: Mente calma
+item.tm5.name=TM5: Rugido
+item.tm6.name=TM6: Tóxico
+item.tm7.name=TM7: Granizo
+item.tm8.name=TM8: Peso acima
+item.tm9.name=TM9: Venochoque
+item.tm10.name=TM10: Poder secreto
+item.tm11.name=TM11: Dia ensolarado
+item.tm12.name=TM12: Irrittar
+item.tm13.name=TM13: Raio de gelo
+item.tm14.name=TM14: Nevasca
+item.tm15.name=TM15: Hiper raio
+item.tm16.name=TM16: Tela clara
+item.tm17.name=TM17: Proteção
+item.tm18.name=TM18: Dança da chuva
+item.tm19.name=TM19: Telecinésia
+item.tm20.name=TM20: Salva guarda
+item.tm21.name=TM21: Frustração
+item.tm22.name=TM22: Raio solar
+item.tm23.name=TM23: Derrubar
+item.tm24.name=TM24: Raio do trovão
+item.tm25.name=TM25: Trovão
+item.tm26.name=TM26: Terremoto
+item.tm27.name=TM27: Retorno
+item.tm28.name=TM28: Cavar
+item.tm29.name=TM29: Psíquico
+item.tm30.name=TM30: Bola das sombras
+item.tm31.name=TM31: Quebra telha
+item.tm32.name=TM32: multiplicar
+item.tm33.name=TM33: Reflexo
+item.tm34.name=TM34: Onda de lama
+item.tm35.name=TM35: Lança-Chamas
+item.tm36.name=TM36: Rajada tóxica
+item.tm37.name=TM37: Tempestade de areia
+item.tm38.name=TM38: Explosão de fogo
+item.tm39.name=TM39: Enterrada de pedras
+item.tm40.name=TM40: Ás aéreo
+item.tm41.name=TM41: Atormentar
+item.tm42.name=TM42: Fachada
+item.tm43.name=TM43: Carga de chamas
+item.tm44.name=TM44: Descanso
+item.tm45.name=TM45: Atração
+item.tm46.name=TM46: Roubar
+item.tm47.name=TM47: Movimento baixo
+item.tm48.name=TM48: Rotação
+item.tm49.name=TM49: Voz ecoante
+item.tm50.name=TM50: Super aquecer
+item.tm51.name=TM51: Troca de aliado
+item.tm52.name=TM52: Explosão focalizada
+item.tm53.name=TM53: Esfera de energia
+item.tm54.name=TM54: Garra energizada
+item.tm55.name=TM55: Escaldar
+item.tm56.name=TM56: Lança item
+item.tm57.name=TM57: Raio carregado
+item.tm58.name=TM58: Queda dos céus
+item.tm59.name=TM59: Incinerar
+item.tm60.name=TM60: Atrasar
+item.tm61.name=TM61: Labareda
+item.tm62.name=TM62: Acrobático
 item.tm63.name=TM63: Embargo
-item.tm64.name=TM64: Explosion
-item.tm65.name=TM65: Shadow Claw
-item.tm66.name=TM66: Payback
-item.tm67.name=TM67: Retaliate
-item.tm68.name=TM68: Giga Impact
-item.tm69.name=TM69: Rock Polish
-item.tm70.name=TM70: Flash
-item.tm71.name=TM71: Stone Edge
-item.tm72.name=TM72: Volt Switch
-item.tm73.name=TM73: Thunder Wave
-item.tm74.name=TM74: Gyro Ball
-item.tm75.name=TM75: Swords Dance
-item.tm76.name=TM76: Struggle Bug
-item.tm77.name=TM77: Psych Up
-item.tm78.name=TM78: Bulldoze
-item.tm79.name=TM79: Frost Breath
-item.tm80.name=TM80: Rock Slide
-item.tm81.name=TM81: X-Scissor
-item.tm82.name=TM82: Dragon Tail
-item.tm83.name=TM83: Work Up
-item.tm84.name=TM84: Poison Jab
-item.tm85.name=TM85: Dream Eater
-item.tm86.name=TM86: Grass Knot
-item.tm87.name=TM87: Swagger
-item.tm88.name=TM88: Pluck
-item.tm89.name=TM89: U-Turn
-item.tm90.name=TM90: Substitute
-item.tm91.name=TM91: Flash Cannon
-item.tm92.name=TM92: Trick Room
-item.tm93.name=TM93: Wild Charge
-item.tm94.name=TM94: Rock Smash
-item.tm95.name=TM95: Snarl
-item.tm96.name=TM96: Mega Punch
-item.tm97.name=TM97: Razor Wind
-item.tm98.name=TM98: Whirlwind
-item.tm99.name=TM99: Mega Kick
-item.tm100.name=TM100: Horn Drill
-item.tm101.name=TM101: Body Slam
-item.tm102.name=TM102: Take Down
-item.tm103.name=TM103: Double-Edge
-item.tm104.name=TM104: BubbleBeam
-item.tm105.name=TM105: Water Gun
-item.tm106.name=TM106: Pay Day
-item.tm107.name=TM107: Submission
-item.tm108.name=TM108: Counter
-item.tm109.name=TM109: Seismic Toss
-item.tm110.name=TM110: Rage
-item.tm111.name=TM111: Mega Drain
-item.tm112.name=TM112: Dragon Rage
-item.tm113.name=TM113: Fissure
-item.tm114.name=TM114: Teleport
-item.tm115.name=TM115: Mimic
-item.tm116.name=TM116: Bide
-item.tm117.name=TM117: Metronome
-item.tm118.name=TM118: Selfdestruct
-item.tm119.name=TM119: Egg Bomb
-item.tm120.name=TM120: Swift
-item.tm121.name=TM121: Skull Bash
-item.tm122.name=TM122: Softboiled
-item.tm123.name=TM123: Sky Attack
-item.tm124.name=TM124: Psywave
-item.tm125.name=TM125: Tri Attack
-item.tm126.name=TM126: DynamicPunch
-item.tm127.name=TM127: Headbutt
+item.tm64.name=TM64: Explosão
+item.tm65.name=TM65: Garra das sombras
+item.tm66.name=TM66: Troco
+item.tm67.name=TM67: Retaliar
+item.tm68.name=TM68: Giga Impacto
+item.tm69.name=TM69: Polidor de rocha
+item.tm70.name=TM70: Iluminar
+item.tm71.name=TM71: Obelisco
+item.tm72.name=TM72: Troca elétrica
+item.tm73.name=TM73: Onda trovão
+item.tm74.name=TM74: Giro bola
+item.tm75.name=TM75: Dança das espadas
+item.tm76.name=TM76: Fúria insecta
+item.tm77.name=TM77: Aumento psíquico
+item.tm78.name=TM78: tremor
+item.tm79.name=TM79: Respiração de gelo
+item.tm80.name=TM80: Deslize de pedras
+item.tm81.name=TM81: Corte X
+item.tm82.name=TM82: Cauda do dragão
+item.tm83.name=TM83: Elaborar
+item.tm84.name=TM84: Injeção venenosa
+item.tm85.name=TM85: Devorador de sonhos
+item.tm86.name=TM86: Nó de grama
+item.tm87.name=TM87: provocação
+item.tm88.name=TM88: Colher
+item.tm89.name=TM89: Seu turno
+item.tm90.name=TM90: Substituição
+item.tm91.name=TM91: Canhão de luz
+item.tm92.name=TM92: Truque de Agilidade
+item.tm93.name=TM93: Ataque selvaegm
+item.tm94.name=TM94: Esmagamento de rocha
+item.tm95.name=TM95: rosnado
+item.tm96.name=TM96: Mega Soco
+item.tm97.name=TM97: Lâmina de vento
+item.tm98.name=TM98: Furacão
+item.tm99.name=TM99: Mega chute
+item.tm100.name=TM100: Broca de chifre 
+item.tm101.name=TM101: Queda de corpo
+item.tm102.name=TM102: Golpe baixo
+item.tm103.name=TM103: Corte duplo
+item.tm104.name=TM104: Rajada de bolhas
+item.tm105.name=TM105: Jato d'água
+item.tm106.name=TM106: Dia do pagamento
+item.tm107.name=TM107: Submissão
+item.tm108.name=TM108: Contra ataque
+item.tm109.name=TM109: Arremesso sísmico
+item.tm110.name=TM110: Fúria
+item.tm111.name=TM111: Mega dreno
+item.tm112.name=TM112: Fúria do dragão
+item.tm113.name=TM113: Ataque ruptura
+item.tm114.name=TM114: Teleporte
+item.tm115.name=TM115: Mímica
+item.tm116.name=TM116: Contra dano
+item.tm117.name=TM117: Metrônomo
+item.tm118.name=TM118: Auto destruição
+item.tm119.name=TM119: Bomba de ovo
+item.tm120.name=TM120: Estrela cadente
+item.tm121.name=TM121: Quebra crânio
+item.tm122.name=TM122: Ovo de cura
+item.tm123.name=TM123: Ataque dos céus
+item.tm124.name=TM124: Onda psíquica
+item.tm125.name=TM125: Tri ataque
+item.tm126.name=TM126: Soco dinâmico
+item.tm127.name=TM127: Cabeçada
 item.tm128.name=TM128: Curse
 item.tm129.name=TM129: Rollout
 item.tm130.name=TM130: Zap Cannon
@@ -617,48 +617,48 @@ item.tm131.name=TM131: Sweet Scent
 item.tm132.name=TM132: Snore
 item.tm133.name=TM133: Icy Wind
 item.tm134.name=TM134: Giga Drain
-item.tm135.name=TM135: Endure
-item.tm136.name=TM136: Iron Tail
-item.tm137.name=TM137: DragonBreath
-item.tm138.name=TM138: Mud-Slap
-item.tm139.name=TM139: Ice Punch
-item.tm140.name=TM140: Sleep Talk
-item.tm141.name=TM141: Defense Curl
-item.tm142.name=TM142: Thunder Punch
-item.tm143.name=TM143: Detect
-item.tm144.name=TM144: Steel Wing
-item.tm145.name=TM145: Fire Punch
-item.tm146.name=TM146: Fury Cutter
-item.tm147.name=TM147: Nightmare
-item.tm148.name=TM148: Focus Punch
-item.tm149.name=TM149: Water Pulse
-item.tm150.name=TM150: Bullet Seed
-item.tm151.name=TM151: Shock Wave
-item.tm152.name=TM152: Secret Power
-item.tm153.name=TM153: Skill Swap
-item.tm154.name=TM154: Snatch
-item.tm155.name=TM155: Roost
-item.tm156.name=TM156: Brine
-item.tm157.name=TM157: Dragon Pulse
-item.tm158.name=TM158: Drain Punch
-item.tm159.name=TM159: Silver Wind
-item.tm160.name=TM160: Recycle
+item.tm135.name=TM135: Endureceer
+item.tm136.name=TM136: Cauda de ferro
+item.tm137.name=TM137: Sopro do dragão
+item.tm138.name=TM138: Tapa de lama
+item.tm139.name=TM139: Soco de gelo
+item.tm140.name=TM140: Ataque sonâmbulo
+item.tm141.name=TM141: Enrolamento de defesa
+item.tm142.name=TM142: Soco do trovão
+item.tm143.name=TM143: Detectar
+item.tm144.name=TM144: Asa de aço
+item.tm145.name=TM145: Soco de fogo
+item.tm146.name=TM146: Corte furioso
+item.tm147.name=TM147: Pesadelo
+item.tm148.name=TM148: Soco focalizado
+item.tm149.name=TM149: Pulsação de água
+item.tm150.name=TM150: Rajada de sementes
+item.tm151.name=TM151: Onda de choque
+item.tm152.name=TM152: Poder secreto
+item.tm153.name=TM153: Troca de habilidades
+item.tm154.name=TM154: Furtar
+item.tm155.name=TM155: Pousar
+item.tm156.name=TM156: Salmoura
+item.tm157.name=TM157: Pulsação do dragão
+item.tm158.name=TM158: Soco drenagem
+item.tm159.name=TM159: Vento de prata
+item.tm160.name=TM160: Reciclar
 item.tm161.name=TM161: Avalanche
 item.tm162.name=TM162: Stealth Rock
-item.tm163.name=TM163: Captivate
-item.tm164.name=TM164: Dark Pulse
-item.tm165.name=TM165: Natural Gift
-item.hm1.name= HM1: Cut
-item.hm2.name=HM2: Fly
+item.tm163.name=TM163: Carisma
+item.tm164.name=TM164: Pulso sombrio
+item.tm165.name=TM165: Presente natural
+item.hm1.name= HM1: Cortar
+item.hm2.name=HM2: Voo
 item.hm3.name=HM3: Surf
-item.hm4.name=HM4: Strength
-item.hm5.name=HM5: Defog
-item.hm6.name=HM6: Rock Smash
-item.hm7.name=HM7: Waterfall
-item.hm8.name=HM8: Rock Climb
-item.hm9.name=HM9: Whirlpool
-item.hm10.name=HM10: Dive
-           
+item.hm4.name=HM4: Força
+item.hm5.name=HM5: Desneblinar
+item.hm6.name=HM6: Esmagamento de rocha
+item.hm7.name=HM7: Cascata
+item.hm8.name=HM8: Escalada
+item.hm9.name=HM9: Redemoinho
+item.hm10.name=HM10: Mergulho
+           *----------------------------------------------------------------------------------------------------------------------------
 item.pokemail_air.name=Air Mail
 item.pokemail_bloom.name=Bloom Mail
 item.pokemail_brick.name=Brick Mail
